--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ h1{
     margin: 50px 0 0 5px;
     width: 90vw;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     border: 2px solid black;
     box-sizing: content-box;
@@ -44,6 +45,8 @@ h1{
     box-sizing: content-box;
     min-width: 300px;
     font-size: 15px;
+    color: red;
+
     height: 60px;
     border: 1px solid black;
     background-color: orange;
