--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ h1{
     box-sizing: content-box;
     min-width: 300px;
     font-size: 15px;
-    color: red;
+    color: black;
 
     height: 60px;
     border: 1px solid black;
